style: updating frontend style

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fractional Calendar</title>
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Inter&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
