--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -120,6 +120,11 @@
             />
             <label for="fraction_none">None</label>
           </div>
+          <div class="fraction-item sidebar-update-btn">
+            <button type="submit" class="form-button">Update</button>
+          </div>
+        </div> <!-- fin de .fraction-container -->
+
         </div>
       </fieldset>
     </aside>
